@@ -1,4 +1,5 @@
 4.1
+ * Log time spent writing keys during compaction (CASSANDRA-17037)
  * Add metrics and logging around index summary redistribution (CASSANDRA-17036)
  * Add configuration options for minimum allowable replication factor and default replication factor (CASSANDRA-14557)
  * Expose information about stored hints via a nodetool command and a virtual table (CASSANDRA-14795)
